--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
     <!-- Placeholder for Google Analytics Code -->
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NQC0CNFJPX"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z6FLYHPF3F"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-NQC0CNFJPX');
+  gtag('config', 'G-Z6FLYHPF3F');
 </script>
 </head>
 <body>
